# img2txt

./: CMakeLists.txt  README.md  img2txt.cpp  img2txt.hpp  img2txt_en_US.ts  main.cpp  window.cpp  window.hpp  window.ui
resources/: genbin.sh  generate.sh  img2txt.desktop
